(fix) O3-4569: Add top padding to prevent modal header label from being clipped

--- a/packages/esm-service-queues-app/src/modals/clear-queue-entries-modal/clear-queue-entries.scss
+++ b/packages/esm-service-queues-app/src/modals/clear-queue-entries-modal/clear-queue-entries.scss
@@ -6,6 +6,7 @@
   overflow-x: hidden;
   word-wrap: break-word;
   overflow-wrap: break-word;
+  padding-top: layout.$spacing-03;
 }
 
 .subHeading {
